# zephyrtastic

./: .gitignore  CMakeLists.txt  Doxyfile  Kconfig  README.md  README.rst  west.yml
.github/workflows/: sim.yml  vectors-drift.yml
docs/: ARCH-REVIEW.md  battery-provenance.md  cfb-display-ui.md  heltec-boards.md  heltec-v4-hardware.md
samples/meshtastic/: CMakeLists.txt  Kconfig  README.rst  overlay-ble.conf  overlay-debug.conf  overlay-display.conf  overlay-environment.conf  overlay-gnss.conf  overlay-mqtt-plain.conf  overlay-mqtt.conf  overlay-net.conf  overlay-netlog.conf  overlay-nodedb-nopsram.conf  overlay-nomqtt.conf  overlay-ota.conf  overlay-psram.conf  prj.conf  (+8 more)
src/: CMakeLists.txt  Kconfig  Kconfig.airtime  Kconfig.ble  Kconfig.core  Kconfig.device_metrics  Kconfig.display  Kconfig.environment_metrics  Kconfig.gnss  Kconfig.message  Kconfig.mqtt  Kconfig.nodedb  Kconfig.nodeinfo  Kconfig.ota  Kconfig.pki  Kconfig.position  Kconfig.reliable  Kconfig.serial  Kconfig.shell  Kconfig.sntp  Kconfig.tcp  Kconfig.telemetry  Kconfig.traceroute  Kconfig.wifi_auto  README.rst  iterables.ld  meshtastic.c  meshtastic_admin.c  meshtastic_admin.h  meshtastic_admin_session.c  meshtastic_admin_session.h  meshtastic_airtime.c  meshtastic_airtime.h  meshtastic_ble.c  meshtastic_channels.c  meshtastic_channels.h  meshtastic_clock.c  meshtastic_clock.h  meshtastic_config_store.c  meshtastic_config_store.h  (+50 more)
tests/protocol/: CMakeLists.txt  prj.conf  testcase.yaml
tests/protocol/src/: channels.c  main.c  phonequeue.c  sched.c  vectors.c
zephyr/: module.yml  patches.yml
(+51 files in other folders)
